--- a/.github/workflows/scheduleJob.yml
+++ b/.github/workflows/scheduleJob.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: '56 11 * * 2'  
+    - cron: '00 12 * * 2'  
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
@@ -14,24 +14,46 @@ on:
  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  example_matrix:
-    strategy:
-      matrix:
-        version: [10]
-        names: ['test1' ,'test2']
-    # condition     
-    #if: ${{ github.ref == 'refs/heads/main' }}  
-    if: github.repository == 'Shubham-Bawa/matrix-demo' 
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      Day: monday
-      name: shubham
-      company: acccenture
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: varibles
-        run: echo "my name is $name. Day is $Day and Company is $company refrenece of $GITHUB_REF and $github.event	"
-      - name: matrixa
-        run: echo ${{matrix.version}} 
-      - name: test  
-        run: echo ${{matrix.names}}
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
+# jobs:
+#   example_matrix:
+#     strategy:
+#       matrix:
+#         version: [10]
+#         names: ['test1' ,'test2']
+#     # condition     
+#     #if: ${{ github.ref == 'refs/heads/main' }}  
+#     if: github.repository == 'Shubham-Bawa/matrix-demo' 
+#     runs-on: ubuntu-latest
+#     env:
+#       Day: monday
+#       name: shubham
+#       company: acccenture
+#     steps:
+#       - name: varibles
+#         run: echo "my name is $name. Day is $Day and Company is $company refrenece of $GITHUB_REF and $github.event	"
+#       - name: matrixa
+#         run: echo ${{matrix.version}} 
+#       - name: test  
+#         run: echo ${{matrix.names}}
