--- a/.github/workflows/scheduleJob.yml
+++ b/.github/workflows/scheduleJob.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: '00 12 * * 2'  
+    - cron: '30 * 28 5 2'  
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
